2004-10-26  Mark D. Baushke  <mdb@cvshome.org>

	* server.c (isProxyServer): Fix hostname setup.

2004-10-26 Derek Price <derek@ximbiot.com>

	Call all exit handlers via atexit() & exit().  Signal handlers exit().
	Eliminates a compiler warning.

	* exithandle.c (cleanup_register): Don't register a signal handler.
	Register a function to block signals before the exit handler is called.
	* lock.c (Lock_Cleanup): Remove never_run_again cruft and assoc. cmts.
	* rcs.c (rcs_cleanup), server.c (server_cleanup): Ditto, plus assume
	signals are blocked.
	* main.c (main_cleanup): Declare noreturn attribute.

2004-10-26 Derek Price <derek@ximbiot.com>

	* gssapi-client.c (connect_to_gserver): Avoid truncating error messages
	from the GSSAPI server.
	(Report from Dan Peterson <dbpete@aol.com>.)

2004-10-26 Derek Price <derek@ximbiot.com>

	* sanity.sh (import-quirks): Test an even branch number.

2004-10-25 Derek Price <derek@ximbiot.com>

	* import.c (import): Repair regex for regressions introduced in last
	commit.
	* sanity.sh (import-quirks): Test a few branch numbers import shouldn't
	have a problem with.

2004-10-25  Mark D. Baushke  <mdb@cvshome.org>

	* sanity.sh (modes3): Quiet rsync messages in proxy mode when
	permissions are removed. They are expected and not a problem here.

2004-10-25 Derek Price <derek@ximbiot.com>

	* import.c (import): Anchor and simplify branch verification regex.
	* sanity.sh (import-quirks): Test another pattern that should fail.

2004-10-25 Derek Price <derek@ximbiot.com>

	* cvs.h (yesno): Remove prototype.
	* edit.c, release.c: Include yesno.h.  Flush output before calling
	yesno().

2004-10-25  Mark D. Baushke  <mdb@cvshome.org>

	* sanity.sh (tagdate): Added some additional tests and FIXCVS
	comments for dealing properly with a 'cvs add' of a file to
	a branch that already exists on the mainline.
	(Problem reported by Renny Barrett <rbarrett@curamsoftware.com>.)

	* sanity.sh (getrlogdate): New shell function.