@@ -6024,7 +6024,7 @@ ${SPROG} update: \`file4' is no longer in the repository"
 '"${SPROG}"' add: use .'"${SPROG}"' commit. to add this file permanently'
 	  dotest death2-16 "${testcvs} -q commit -m add" \
 "$CVSROOT_DIRNAME/first-dir/file2,v  <--  file2
-new revision: 1\.1\.2\.1; previous revision: 1\.1"
+new revision: 1\.1\.2\.2; previous revision: 1\.1\.2\.1"
 
 	  # Add a new file on the branch.
 	  echo "first revision" > file3
@@ -9427,7 +9427,7 @@ ${SPROG} add: use .${SPROG} commit. to add this file permanently"
 	  dotest branch-after-import-6 \
 "$testcvs commit -m cvs-add file2" \
 "$CVSROOT_DIRNAME/first-dir/file2,v  <--  file2
-new revision: 1\.1\.1\.1\.2\.1; previous revision: 1\.1\.1\.1"
+new revision: 1\.1\.1\.1\.2\.2; previous revision: 1\.1\.1\.1\.2\.1"
 
 	  dokeep
 	  cd ../..
@@ -9661,7 +9661,7 @@ T file9'
 "$CVSROOT_DIRNAME/first-dir/Attic/file1,v  <--  file1
 new revision: 1\.1\.2\.1; previous revision: 1\.1
 $CVSROOT_DIRNAME/first-dir/file2,v  <--  file2
-new revision: 1\.1\.2\.1; previous revision: 1\.1
+new revision: 1\.1\.2\.2; previous revision: 1\.1\.2\.1
 $CVSROOT_DIRNAME/first-dir/file3,v  <--  file3
 new revision: delete; previous revision: 1\.1\.2\.1
 $CVSROOT_DIRNAME/first-dir/file4,v  <--  file4
@@ -9737,8 +9737,8 @@ M file4'
 U first-dir/file2
 RCS file: ${CVSROOT_DIRNAME}/first-dir/file2,v
 retrieving revision 1\.1
-retrieving revision 1\.1\.2\.1
-Merging differences between 1\.1 and 1\.1\.2\.1 into file2
+retrieving revision 1\.1\.2\.2
+Merging differences between 1\.1 and 1\.1\.2\.2 into file2
 U first-dir/file3
 ${SPROG} checkout: scheduling \`first-dir/file3' for removal
 U first-dir/file4
@@ -9772,8 +9772,8 @@ U first-dir/file7'
 "U file1
 RCS file: ${CVSROOT_DIRNAME}/first-dir/file2,v
 retrieving revision 1\.1
-retrieving revision 1\.1\.2\.1
-Merging differences between 1\.1 and 1\.1\.2\.1 into file2
+retrieving revision 1\.1\.2\.2
+Merging differences between 1\.1 and 1\.1\.2\.2 into file2
 ${SPROG} update: scheduling \`file3' for removal
 M file4
 ${SPROG} update: file file4 is locally modified, but has been removed in revision branch
@@ -9811,8 +9811,8 @@ T file7"
 "U file1
 RCS file: ${CVSROOT_DIRNAME}/first-dir/file2,v
 retrieving revision 1.1
-retrieving revision 1.1.2.1
-Merging differences between 1.1 and 1.1.2.1 into file2
+retrieving revision 1.1.2.2
+Merging differences between 1.1 and 1.1.2.2 into file2
 ${SPROG} update: scheduling \`file3' for removal
 ${SPROG} update: file file4 has been modified, but has been removed in revision branch
 U file8
@@ -9845,8 +9845,8 @@ U file1
 U file2
 RCS file: ${CVSROOT_DIRNAME}/first-dir/file2,v
 retrieving revision 1\.1
-retrieving revision 1\.1\.2\.1
-Merging differences between 1\.1 and 1\.1\.2\.1 into file2
+retrieving revision 1\.1\.2\.2
+Merging differences between 1\.1 and 1\.1\.2\.2 into file2
 U file3
 ${SPROG} update: scheduling \`file3' for removal
 U file4
@@ -16963,7 +16963,7 @@ T file1'
 "${SPROG} add: use .${SPROG} commit. to add this file permanently"
 	  dotest ignore-on-branch-5 "$testcvs -q ci -mbranch file2" \
 "$CVSROOT_DIRNAME/ignore-on-branch/file2,v  <--  file2
-new revision: 1\.1\.2\.1; previous revision: 1\.1"
+new revision: 1\.1\.2\.2; previous revision: 1\.1\.2\.1"
 	  dotest ignore-on-branch-6 "$testcvs -q up -rbranch2" \
 "${SPROG} update: \`file2' is no longer in the repository"
 	  dotest ignore-on-branch-7 "$testcvs -q up -jbranch" 'U file2'
@@ -24165,15 +24165,10 @@ new revision: 1\.2; previous revision: 1\.1"
 	  dotest tagdate-24 "${testcvs} add file2" \
 "${SPROG} add: scheduling file \`file2' for addition on branch \`br2'
 ${SPROG} add: use \`${SPROG} commit' to add this file permanently"
-	  # FIXCVS: This test should create a 1.2.2.1 that is dead
-	  # and a 1.2.2.2 here. Otherwise datestamp checkouts of
-	  # the branch between creation of 1.1 and 1.2.2.1 will
-	  # cause a trunk version of the file to be visible on the
-          # branch.
 	  dotest tagdate-25 "${testcvs} -q ci -m add file2" \
 "$CVSROOT_DIRNAME/first-dir/file2,v  <--  file2
-new revision: 1\.2\.2\.1; previous revision: 1\.2"
-	  date_T9=`getrlogdate -r1.2.2.1 first-dir/file2`
+new revision: 1\.2\.2\.2; previous revision: 1\.2\.2\.1"
+	  date_T9=`getrlogdate -r1.2.2.2 first-dir/file2`
 	  cd ../..
 
 	  # Time  Rev     Branch  Comments
@@ -24190,13 +24185,8 @@ new revision: 1\.2\.2\.1; previous revision: 1\.2"
 	  # T6    1.1.2.1 br2     first-dir/file3 committed "br2-1"
 	  # T7    1.1     trunk   first-dir/file2 committed "trunk-1"
 	  # T8    1.2     trunk   first-dir/file2 committed "trunk-2"
-	  #
-	  # FIXCVS? PROBLEM... checkouts of the br2 branch after T8
-	  # which specifies a timestamp between T8 and before T9 will
-	  # show version 1.2 of the file on the br branch even though
-	  # that was not the real branch point chosen by the user.
-	  #
-	  # T9    1.2.2.1 br2     first-dir/file2 committed "br2-1"
+	  # T8    1.2.2.1 br2     first-dir/file2 dead
+	  # T9    1.2.2.2 br2     first-dir/file2 committed "br2-1"
 	  # 
 
 	  mkdir 4; cd 4
@@ -24257,7 +24247,6 @@ U first-dir-trunk-t8/file2"
 "${testcvs} co -r br2 -D'$date_T8' -d first-dir-br2-t8 first-dir" \
 "${SPROG} checkout: Updating first-dir-br2-t8
 U first-dir-br2-t8/file1
-U first-dir-br2-t8/file2
 U first-dir-br2-t8/file3"
 	  dotest tagdate-26-br2-t9 \
 "${testcvs} co -r br2 -D'$date_T9' -d first-dir-br2-t9 first-dir" \
@@ -24411,14 +24400,6 @@ File: file2            	Status: Up-to-date
    Sticky Tag:		(none)
    Sticky Date:		${RCSDELTADATE}
    Sticky Options:	(none)"
-
-	  #
-	  # FIXCVS? It is considered unexpected by some that creation
-	  # of a branch br2 on file2 means that the trunk version of
-	  # the file shows thru to the branch in time-based checkouts
-	  # between the time that file2 was created and the actual
-	  # version of the file was committed to the branch.
-	  #
 	  dotest tagdate-27-br2-t8 \
 "${testcvs} status first-dir-br2-t8" \
 "${SPROG} status: Examining first-dir-br2-t8
@@ -24428,15 +24409,6 @@ File: file1            	Status: Up-to-date
    Working revision:	1\.1\.4\.2[^.]*
    Repository revision:	1\.1\.4\.2	${CVSROOT_DIRNAME}/first-dir/file1,v
    Sticky Tag:		br2 (branch: 1\.1\.4)
-   Sticky Date:		(none)
-   Sticky Options:	(none)
-
-===================================================================
-File: file2            	Status: Needs Patch
-
-   Working revision:	1\.2[^.]*
-   Repository revision:	1\.2\.2\.1	${CVSROOT_DIRNAME}/first-dir/file2,v
-   Sticky Tag:		br2 (branch: 1\.2\.2)
    Sticky Date:		(none)
    Sticky Options:	(none)
 
@@ -24463,8 +24435,8 @@ File: file1            	Status: Up-to-date
 ===================================================================
 File: file2            	Status: Up-to-date
 
-   Working revision:	1\.2\.2\.1[^.]*
-   Repository revision:	1\.2\.2\.1	${CVSROOT_DIRNAME}/first-dir/file2,v
+   Working revision:	1\.2\.2\.2[^.]*
+   Repository revision:	1\.2\.2\.2	${CVSROOT_DIRNAME}/first-dir/file2,v
    Sticky Tag:		br2 (branch: 1\.2\.2)
    Sticky Date:		(none)
    Sticky Options:	(none)
@@ -24494,14 +24466,6 @@ File: file3            	Status: Up-to-date
 	  dotest tagdate-28-trunk-t8a 'cat first-dir-trunk-t8/file1' "trunk-2"
 	  dotest tagdate-28-trunk-t8b 'cat first-dir-trunk-t8/file2' "trunk-2"
 	  dotest tagdate-28-br2-t8a 'cat first-dir-br2-t8/file1' "br2-2"
-	  #
-	  # FIXCVS? It is considered unexpected by some that creation
-	  # of a branch br2 on file2 means that the trunk version of
-	  # the file shows thru to the branch in time-based checkouts
-	  # between the time that file2 was created and the actual
-	  # version of the file was committed to the branch.
-	  #
-	  dotest tagdate-28-br2-t8b 'cat first-dir-br2-t8/file2' "trunk-2"
 	  dotest tagdate-28-br2-t8c 'cat first-dir-br2-t8/file3' "br2-1"
 	  dotest tagdate-28-br2-t9a 'cat first-dir-br2-t9/file1' "br2-2"
 	  dotest tagdate-28-br2-t9b 'cat first-dir-br2-t9/file2' "br2-1"
